deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamhex-vue
  labels:
    app: teamhex-vue
    type: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teamhex-vue
      type: frontend
  template:
    metadata:
      labels:
        app: teamhex-vue
        type: frontend
    spec:
      imagePullSecrets:
        - name: github
      containers:
        - name: teamhex-vue
          image: docker.pkg.github.com/weters/teamhex-vue/teamhex-vue:latest
          readinessProbe:
            httpGet:
              port: 80
              path: /
          livenessProbe:
            httpGet:
              port: 80
              path: /
